Generate new cv

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <title>Richard Hendriks</title>
+  <title>Ricardo Ramirez</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <style>
   /********************************************
@@ -778,7 +778,7 @@ ul.courses li:hover {
   <div id="resume">
     	<header id="header" class="clear">
     		<div>
-    			<h1 class="name">Richard Hendriks</h1>
+    			<h1 class="name">Ricardo Ramirez</h1>
     			<h2 class="label">Programmer</h2>
     		</div>
     		
